etc/iptables.rules
# Generated by iptables-save v1.4.4 on Thu Feb 17 15:02:58 2011
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [212309390:28731606686]
-A INPUT -i lo -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
#-# change SCHOOL_NET to the network for which you provide the service
-A INPUT -s SCHOOL_NET -p tcp -m tcp --dport 80 -j ACCEPT 
-A INPUT -s SCHOOL_NET -p udp -m udp --dport 53 -j LOG --log-prefix "iptables DNS: " 
-A INPUT -s SCHOOL_NET -p tcp -m tcp --dport 53 -j LOG --log-prefix "iptables DNS: " 
-A INPUT -s SCHOOL_NET -p udp -m udp --dport 53 -j ACCEPT 
-A INPUT -s SCHOOL_NET -p tcp -m tcp --dport 53 -j ACCEPT 
#-# change ADMIN_NET to the network from which system is administered/monitored
-A INPUT -s ADMIN_NET -j ACCEPT  
-A INPUT -j DROP 
COMMIT
# Completed on Thu Feb 17 15:02:58 2011
